# yet-another-discord-bot

./: .flake8  .gitignore  Makefile  README.md  bot.py  dev_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  testing.py  tools.sh
config/: config.ini
lib/: __init__.py  booru_client.py  cleverbot_client.py  config.py  event_handler.py  misc_functions.py  remind_client.py  token_handler.py  utils.py  waifu_client.py
